client/src/components/GameBoard.css
.board{
    display: flex;
    padding: 2% 5%;
    width: 90%;
    flex-wrap: wrap;
}

body {
    overflow-x: hidden;
}

.inputs {
    width: 70px;
    text-align: center;
    outline: none;
    border: none;
    border-bottom: 3px solid black;
    margin: 0 5px;
    font-size: 2.5rem;
    text-transform: uppercase;
}

.Letters {
    font-size: 3.5rem;
    line-height: 4rem;

}

.keys{
    color: rgb(128, 128, 128);
}

.input-div{
    margin: 15px 0;
}

.finish-cover{
    width:100%; 
    height:100%; 
    z-index:999; 
    background-color: white;
    
}

.finish-title{
    height: 5rem;
    color:rgb(116, 204, 29);
}

.finish-title-wrapper{
    position: absolute;                       
    font-size: 4rem;
    top: 50%;
    transform: translate(150%, -50%);
}

.finish-btn{
    font-size: 1.5rem;
    border-radius: 20px;
    padding: 0.5rem 2rem;
    background-color: black;
    color: white;
    border: 2px solid;
    transition: 0.2s ease-in-out;
    cursor: pointer;
}

.finish-btn:hover{
    background-color: white;
    color: black;
    border: 2px solid black;
}

.button{
    border: 4px solid white;
    border-radius: 30px;
    background-color: black;
    margin: 0 2rem;
    padding: 0.5rem 2rem;
    color:white;
    font-size: 1.5rem;
    cursor: pointer;
    transition: 0.3s;
}

.submit-btn{
    background-color: rgb(96, 221, 96);
}


.submit-btn:hover{
    background-color: white;
    border-color: black;
    color:black;
}

.hint-btn:hover{
    background-color: white;
    color: black;
    border-color: black;
}

